# speechrecognitor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  audiolevel.cpp  audiolevel.h  audiorecorder.cpp  audiorecorder.h  audiorecorder.ui  audiorecordersettingswidget.cpp  audiorecordersettingswidget.h  audiowavewidget.cpp  audiowavewidget.h  awstranscribewrapper.cpp  awstranscribewrapper.h  build_libdeepspeech.sh  deepspeechwrapper.cpp  deepspeechwrapper.h  googlespeechwrapper.cpp  googlespeechwrapper.h  internal_build.sh  main.cpp  speechrecognitor.pro  texttospeech.cpp  texttospeech.h  texttospeechsettingswidget.cpp  texttospeechsettingswidget.h
examples/: CMakeLists.txt
examples/include/: CMakeLists.txt  audiorecorder.h
examples/src/: CMakeLists.txt  audiorecorder.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  speechrecognitor.h
lib/src/: CMakeLists.txt  speechrecognitor.cpp
